# 21cmCAST

./: .gitignore  README.md  meta.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
example/: example.config  run_fisher.py
examples/: example.config  example_wdm.config  fisher.ipynb  init_fisher.py  run_batch_lightcones.py  run_batches.py  run_lightcone.py  run_single_lightcone.py
scripts/config/: Fiducial0.config  Fiducial0_MiniHalos.config  Fiducial1.config  constraint_bkr.config  constraint_bkr_minihalos.config  constraint_nobkr.config  constraint_nobkr_elec_large_LX.config  constraint_only_minihalos.config  noDM.config  noDM2.config  noDM3.config  noDM4.config  noDM5.config  noDM6.config  noDM7.config  noDM_m100MeV.config  noDM_small.config  small.config  small_bkr.config  small_nobkr.config
scripts/exec/: analyse_tau_steps.ipynb  cluster_output.txt  cluster_output_fid0.txt  cluster_output_fid1.txt  compare_ps.ipynb  compare_tau_steps.ipynb  fisher.ipynb  fisher_constraints.ipynb  fisher_test.ipynb  illustration.ipynb  plot_experiment.ipynb  plot_triangles.ipynb  run_fisher.py  submit_one_run_fisher.sh  submit_run_fisher.sh  submit_run_fisher_NODM.sh  test_minihalos.ipynb
scripts/figures_paper/: Figure_Lightcone_rs1993_FIDUCIAL.npz  Figure_Lightcone_rs1993_LX_38.0.npz  Figure_Lightcone_rs1993_LX_41.0.npz  Figure_Lightcone_rs1993_LX_MINI_41.0.npz  Figure_Lightcone_rs1993_MINI_FIDUCIAL.npz  Figure_Lightcone_rs1993_ee_MINI_m10MeV_tau_1e26.5.npz  Figure_Lightcone_rs1993_ee_m10MeV_tau1e26s.npz
src/py21cmcast/: core.py  (+10 more)
tests/: test.py
(+6 files in other folders)
