[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py21cmcast"
version = "0.0.1"
authors = [
  { name="Gaetan Facchinetti", email="gaetanfacc@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
